--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Van Blockly naar JavaScript</title>
     <link rel="icon" href="javascript.ico" type="image/x-icon"> 
-    <script src="index.js"></script> 
+    <script src="index3.js"></script> 
 </head>
 <body>
 </body>
