--- a/Artikels/index.html
+++ b/Artikels/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Van Blockly naar JavaScript</title>
     <link rel="icon" href="javascript.ico" type="image/x-icon"> 
-    <script src="index_lengte_personen.js"></script> 
+    <script src="index_artikels.js"></script> 
 </head>
 <body>
 </body>
