aanpassing copyright.js

--- a/JavaScript/copyright.html
+++ b/JavaScript/copyright.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html lang="nl">
-    <head>
-        <title>Copyright</title>
-        <link rel="icon" href="javascript.ico" type="image/x-icon">
-        <link rel="stylesheet" href="default.css">    
-    </head>
-    <body>
-        Copyright ©
-        <span id="jaar"></span>
-        <a id="vdab" href="https://www.vdab.be/">VDAB</a>
-        <script src="copyright.js"></script>
-    </body>
+<head>
+    <script src="copyright.js"></script>
+    <title>Copyright</title>
+    <link rel="icon" href="javascript.ico" type="image/x-icon">
+    <link rel="stylesheet" href="default.css">
+</head>
+<body> Copyright © <span id="jaar"></span>
+    <a id="vdab" href="https://www.vdab.be/">VDAB</a>
+</body>
 </html>
