--- a/JavaScript/begroeting.html
+++ b/JavaScript/begroeting.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="nl">
 <head>
-    <script src="copyright.js" defer></script>
-    <title>Copyright</title>
+    <script src="begroeting.js" defer></script>
+    <title>Begroeting</title>
     <link rel="icon" href="javascript.ico" type="image/x-icon">
     <link rel="stylesheet" href="default.css">
 </head>
-<body> Copyright © <span id="jaar"></span>
-    <a id="vdab" href="https://www.vdab.be/">VDAB</a>
+<body>
+    <p id="begroeting"></p>
 </body>
 </html>
