--- a/JavaScript/datums.html
+++ b/JavaScript/datums.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="nl">
-    <head>
-        <script src="datums.js"></script>
-        <title>Datums</title>
-        <link rel="icon" href="javascript.ico" type="image/x-icon">
-    </head>
-    <body>
-    </body>
+<head>
+    <script src="datums.js" defer></script>
+    <title>Datums</title>
+    <link rel="icon" href="javascript.ico" type="image/x-icon">
+</head>
+<body>
+</body>
 </html>
