--- a/JavaScript/standbeelden.html
+++ b/JavaScript/standbeelden.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <ul id="standbeelden">
-        <li><a href="#" id="vrijheidsbeeld">Vrijheidsbeeld</a></li>
-        <li><a href="#" id="moederland">Het moederland roept</a></li>
-        <li><a href="#" id="mannekepis">Manneke pis</a></li>
+        <li><a href="#" data-foto="vrijheidsbeeld" data-plaats="New York">Vrijheidsbeeld</a></li>
+        <li><a href="#" data-foto="moederland" data-plaats="Volgograd">Het moederland roept</a></li>
+        <li><a href="#" data-foto="mannekepis" data-plaats="Brussel">Manneke pis</a></li>
+        <li><a href="#" data-foto="verlosser" data-plaats="Rio de Janeiro">Christus de Verlosser</a></li>
     </ul>
     <img id="afbeelding" alt="standbeeld" src="leeg.png">
+    <button id="isHetWeekend">Is het weekend?</button> <br>
+    <div id="weekend">Test123</div>
 </body>
 </html>
