--- a/JavaScript/pannenkoek.html
+++ b/JavaScript/pannenkoek.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="nl">
-
 <head>
     <script src="pannenkoek.js" defer></script>
     <title>Pannenkoek</title>
     <link rel="icon" href="javascript.ico" type="image/x-icon">
     <link rel="stylesheet" href="default.css">
 </head>
-
 <body>
     <h1>Pannenkoek</h1>
-    <p id="beschrijving" class="zachteAchtergrond dunneKader">
-        Een pannenkoek wordt in een koekenpan met verhitte vetstof gebakken.<br>
-        Sommigen werpen de pannenkoek omhoog en vangen hem terug in de koekepan.<br>
-        Pannenkoeken worden vaak opgerold of opgeplooid gegeten met zoete of hartige vulling.<br>
-        Men kan pannenkoeken warm of koud eten.
-    </p>
+    <p id="beschrijving" class="zachteAchtergrond dunneKader"> Een pannenkoek wordt in een koekenpan met verhitte vetstof gebakken.<br> Sommigen werpen de pannenkoek omhoog en vangen hem terug in de koekepan.<br> Pannenkoeken worden vaak opgerold of opgeplooid gegeten met zoete of hartige vulling.<br> Men kan pannenkoeken warm of koud eten. </p>
     <h2>Ingrediënten</h2>
     <ul id="ingrediënten">
         <li>200 gr. bloem</li>
@@ -27,13 +20,8 @@
     </ul>
     <h2>Werkwijze</h2>
     <ol id="werkwijze">
-        <li>Smelt de boter in een pot en doe de bloem, eieren, suiker, melk en de olie erbij.<br>
-            Goed roeren tot alle klonters uit het deeg zijn. Doe een beetje arachide-olie in de pan en laat goed warm
-            worden.</li>
-        <li>Doe een schep van het deeg in de pan en begin onmiddellijk te draaien met de pan, zodanig dat het deeg mooi
-            verdeeld is.<br>
-            Gebruik een spatel voor het draaien en snij de pannenkoek los langs de randen.</li>
+        <li>Smelt de boter in een pot en doe de bloem, eieren, suiker, melk en de olie erbij.<br> Goed roeren tot alle klonters uit het deeg zijn. Doe een beetje arachide-olie in de pan en laat goed warm worden.</li>
+        <li>Doe een schep van het deeg in de pan en begin onmiddellijk te draaien met de pan, zodanig dat het deeg mooi verdeeld is.<br> Gebruik een spatel voor het draaien en snij de pannenkoek los langs de randen.</li>
     </ol>
 </body>
-
 </html>
