--- a/JavaScript/fastfood.html
+++ b/JavaScript/fastfood.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="nl">
-
 <head>
     <script src="fastfood.js" defer></script>
     <title>Fastfood</title>
     <link rel="icon" href="javascript.ico" type="image/x-icon">
     <link rel="stylesheet" href="default.css">
 </head>
-
 <body>
     <fieldset>
         <legend id="hamburgersLegend">Hamburger (<span id="aantalHamburgers"></span> soorten)</legend>
@@ -22,7 +20,7 @@
             <option>Brazucaburger</option>
             <option>Blackangusburger</option>
             <option>Lamsburger</option>
-            <option>Camenbertburger</option>            
+            <option>Camenbertburger</option>
         </select>
     </fieldset>
     <fieldset>
@@ -33,16 +31,13 @@
     </fieldset>
     <fieldset>
         <legend>Dessert (kies één of meerdere) (<span id="aantalDesserts"></span> soorten)</legend>
-        <label><input type="checkbox" name="dessert" value="fruit">Fruit</label>
-        <label><input type="checkbox" name="dessert" value="ijsje">Ijsje</label>
-        <label><input type="checkbox" name="dessert" value="muffin">Muffin</label>
+        <label><input type="checkbox" name="dessert" value="6">Fruit</label>
+        <label><input type="checkbox" name="dessert" value="4">Ijsje</label>
+        <label><input type="checkbox" name="dessert" value="2">Muffin</label>
     </fieldset>
     <div>Uw keuzes:</div>
     <div id="keuzeBurger"></div>
     <div id="keuzeFriet"></div>
     <div id="keuzeDessert"></div>
-
-
 </body>
-
 </html>
