--- a/JavaScript/hallo.html
+++ b/JavaScript/hallo.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html lang="nl">
-
 <head>
     <script src="hallo.js" defer></script>
     <title>Hallo</title>
     <link rel="icon" href="javascript.ico" type="image/x-icon">
     <link rel="stylesheet" href="default.css">
 </head>
-
 <body>
-    <h1>Hallo
-        <span id="voornaam"></span>
+    <h1>Hallo <span id="voornaam"></span>
     </h1>
 </body>
-
 </html>
