aanpassingen oefening geslachten

--- a/JavaScript/geslachten/geslachten.html
+++ b/JavaScript/geslachten/geslachten.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="geslachten.css">
 </head>
 <body>
-    <p id="test"></p>
+    <table id="tabelGeslachten">
+        <thead>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </body>
 </html>
