aanpassingen oefening geslachten

--- a/JavaScript/geslachten/geslachten.html
+++ b/JavaScript/geslachten/geslachten.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="geslachten.css">
 </head>
 <body>
+    <ul>
+        <a href="#" data-selectie="vrouw">Vrouw</a>
+        <a href="#" data-selectie="man">Man</a>
+        <a href="#" data-selectie="x">X</a>
+        <a href="#" data-selectie="alle">Alle</a>
+    </ul>
     <table id="tabelGeslachten">
         <thead>
         </thead>
