--- a/JavaScript/geslachten/geslachten.html
+++ b/JavaScript/geslachten/geslachten.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <ul>
-        <a href="#" data-selectie="vrouw">Vrouw</a>
-        <a href="#" data-selectie="man">Man</a>
+        <a href="#" data-selectie="man">Mannen</a>
+        <a href="#" data-selectie="vrouw">Vrouwen</a>
         <a href="#" data-selectie="x">X</a>
-        <a href="#" data-selectie="alle">Alle</a>
+        <a href="#" data-selectie="alle">Allen</a>
     </ul>
     <table id="tabelGeslachten">
         <thead>
